- replace select() with poll() - implement swap usage checking
TODO: test all (this is initial checkin - needs to be checked on all platforms for both compilation and functionality)



git-svn-id: http://monit.googlecode.com/svn/trunk@145 808b68a2-07de-11de-a1f0-819f45317607

--- a/configure.ac
+++ b/configure.ac
@@ -104,6 +104,7 @@ AC_CHECK_HEADERS([ \
 	netinet/in.h \
         netinet/in_systm.h \
         pam/pam_appl.h \
+	poll.h \
 	procfs.h \
 	procinfo.h \
 	pthread.h \
@@ -134,6 +135,7 @@ AC_CHECK_HEADERS([ \
 	sys/resource.h \
 	sys/statfs.h \
 	sys/statvfs.h \
+        sys/swap.h \
 	sys/systemcfg.h \
 	sys/time.h \
 	sys/tree.h \
