disable strip in make install ... when monit crashes, it is better to get symbols from user, the file size increase is irrelevant nowadays with hundreds of gigabytes/terabytes disks available
git-svn-id: http://monit.googlecode.com/svn/trunk@252 808b68a2-07de-11de-a1f0-819f45317607

--- a/Makefile.in
+++ b/Makefile.in
@@ -36,7 +36,7 @@ MODE_CONF       = 600
 MODE_DIRS       = 755
 
 INSTALL         = @INSTALL@ 
-INSTALL_PROG    = $(INSTALL) -m $(MODE_PROGS) -s
+INSTALL_PROG    = $(INSTALL) -m $(MODE_PROGS)
 INSTALL_FILE    = $(INSTALL) -m $(MODE_FILES)
 INSTALL_DIR     = $(INSTALL) -m $(MODE_DIRS) -d
 
