add -rdynamic for linux so we can see symbol names in backtrace
git-svn-id: http://monit.googlecode.com/svn/trunk@255 808b68a2-07de-11de-a1f0-819f45317607

--- a/configure.ac
+++ b/configure.ac
@@ -401,6 +401,7 @@ elif test `uname` = "Linux"
 then
    ARCH="LINUX"
    CFLAGS="$CFLAGS -D _REENTRANT"
+   LDFLAGS="$LDFLAGS -rdynamic"
    if test `uname -r | awk -F '.' '{print$1$2}'` -ge "26"
    then
    	AC_DEFINE([HAVE_CPU_WAIT], [1], [Define to 1 if CPU wait information is available.])
