Index: external/strftime.c ... openbsd compiler warning fix
Index: protocols/sip.c
... openbsd compiler warning fix

Index: device/sysdep_FREEBSD.c
... allow usage of path to block device in filesystem check path - formerly monit took filesystem where the device file resides (usually devfs pseudo filesystem)

Index: device/sysdep_OPENBSD.c
... allow usage of path to block device in filesystem check path - formerly monit took filesystem where the device file resides (usually devfs pseudo filesystem)

Index: device/sysdep_NETBSD.c
... allow usage of path to block device in filesystem check path - formerly monit took filesystem where the device file resides (usually devfs pseudo filesystem)
... fix space usage value (it used wrong block size so monit showed multiple of real filesystem size)

Index: device/device_common.c
... openbsd uses character device in place for block device => need to allow it too

Index: device/sysdep_DARWIN.c
... allow usage of path to block device in filesystem check path - formerly monit took filesystem where the device file resides (usually devfs pseudo filesystem)

Index: socket.c
... openbsd compiler warning fix

Index: process/sysdep_LINUX.c
... support for OpenVZ 2.6.32 kernel which hides part of /proc/meminfo in VPS hosts (only basic statistics are available in OpenVZ)




git-svn-id: http://monit.googlecode.com/svn/trunk@308 808b68a2-07de-11de-a1f0-819f45317607

--- a/configure.ac
+++ b/configure.ac
@@ -10,7 +10,7 @@ AC_PREREQ([2.53])
 # Note: in  case of beta subversion, use underscore "_" rather then dash "-"
 # since RPM doesn't allow dash in Version
 # Example: 5.0_beta2
-AC_INIT([monit], [5.2.3], [monit-general@nongnu.org])
+AC_INIT([monit], [5.2.4], [monit-general@nongnu.org])
 
 # Package info
 AC_REVISION([$Revision: 1.194 $])
@@ -141,6 +141,7 @@ AC_CHECK_HEADERS([ \
 	sys/time.h \
 	sys/tree.h \
 	sys/types.h \
+	sys/ucred.h \
 	sys/un.h \
 	sys/utsname.h \
         sys/vmmeter.h \
